# IREC_analysis

./: final_flight_sim_prenoise.csv  inertial_vs_barom.py  launch_log.py  pyproject.toml  rocket_viz.py
