[project]
name = "flight2-analysis"
version = "0.1.0"
description = "Data analysis for flight log"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["launch_log.py"]
